--- a/converse/converse.js-0.9.1/src/templates/controlbox.html
+++ b/converse/converse.js-0.9.1/src/templates/controlbox.html
@@ -22,7 +22,7 @@
 				</div>
 				<div class="button">
 					<hr>
-					<button>Add</button>
+					<button class="addContact">Add</button>
 				</div>
     		</form>
     	</div>
