--- a/converse/converse.js-0.9.1/src/templates/chatbox.html
+++ b/converse/converse.js-0.9.1/src/templates/chatbox.html
@@ -18,13 +18,15 @@
     <div class="chat-body">
         <div class="chat-content"></div>
         <form class="sendXMPPMessage" action="" method="post">
-            {[ if (show_toolbar) { ]}
+			<div class="chat-textarea-divider"></div>
+			<textarea
+					type="text"
+					class="chat-textarea"
+					placeholder="{{label_personal_message}}"/>
+			{[ if (show_toolbar) { ]}
                 <ul class="chat-toolbar no-text-select"></ul>
             {[ } ]}
-        <textarea
-            type="text"
-            class="chat-textarea"
-            placeholder="{{label_personal_message}}"/>
+
         </form>
     </div>
 </div>
