--- a/converse/converse.js-0.9.1/src/templates/roster_item.html
+++ b/converse/converse.js-0.9.1/src/templates/roster_item.html
@@ -2,5 +2,9 @@
 JID: {{jid}}
 {{desc_chat}}" href="#"><span class="icon-{{chat_status}}" title="{{desc_status}}"></span>{{fullname}}</a>
 {[ if (allow_contact_removal) { ]}
-<a class="remove-xmpp-contact icon-remove" title="{{desc_remove}}" href="#"></a>
+<a class="alter-menu-xmpp-contact icon-more-options" title="{{desc_remove}}" href="#"></a>
 {[ } ]}
+<ul class="custom-menu" data-jid="{{jid}}">
+	<li class="renameContact">Rename Contact</li>
+	<li class="removeContact">Remove Contact</li>
+</ul>
