--- a/converse/converse.js-0.9.4/src/templates/login_panel.html
+++ b/converse/converse.js-0.9.4/src/templates/login_panel.html
@@ -1,6 +1,8 @@
 <div class="connectionSpinnerPanel">
 	<span class="spinner"></span>
 	<span class="conn-feedback"></span>
+	<span class="conn-error" style="display: none;"></span>
+	<span class="conn-error-retry" style="display: none;"><a class="conn-retry" href="#"></a></span>
 </div>
 <form id="converse-login" method="post" style="display: none;">
     <label>{{label_username}}</label>
