Bug 101580 - Profile pic of contact need to be aligned.
Revert the changes for chat title height in default variables.scss file. Added the margin-top for title to center align them.

https://bugzilla.zimbra.com/show_bug.cgi?id=101580

Copied from Perforce
 Change: 558836

--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -268,3 +268,7 @@
  #conversejs .chat-title [class^="icon-"]{
     padding-right: 0.2rem;
     }
+
+#conversejs .chat-title, #conversejs dt.fancy-dropdown, #conversejs a.close-chatbox-button {
+  margin-top: 5px;
+}
