--- a/converse/converse.js-0.9.4/src/templates/chatbox.html
+++ b/converse/converse.js-0.9.4/src/templates/chatbox.html
@@ -8,7 +8,7 @@
             {[ if (url) { ]}
                 <a href="{{url}}" target="_blank" class="user">
             {[ } ]}
-                    {{ fullname }}
+                   <span class="header-contact-name"> {{ fullname }} </span>
             {[ if (url) { ]}
                 </a>
             {[ } ]}
