--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*!
  * Converse.js (Web-based XMPP instant messaging client)
  * http://conversejs.org
@@ -469,8 +468,8 @@
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
     height: 289px;
-    height: -webkit-calc(100% - 44px);
-    height: calc(100% - 44px);
+    height: -webkit-calc(100% - 32px);
+    height: calc(100% - 32px);
     border-top: 0; }
     #conversejs .chat-body p {
       font-size: 14px;
@@ -611,7 +610,7 @@
     white-space: nowrap; }
   #conversejs .chat-head-chatbox,
   #conversejs .chat-head-chatroom {
-    height: 44px;
+    height: 32px;
     position: relative;
     padding: 5px; }
   #conversejs .user-custom-message,
@@ -1047,8 +1046,8 @@
     text-align: center;
     width: 100%;
     height: 289px;
-    height: -webkit-calc(100% - 44px);
-    height: calc(100% - 44px); }
+    height: -webkit-calc(100% - 32px);
+    height: calc(100% - 32px); }
   #conversejs .controlbox-pane {
     padding: 5px 0;
     overflow-y: hidden; }
@@ -1143,7 +1142,7 @@
     #conversejs .chat-head.controlbox-head {
       /* ZCS - Original code commented */
       color: #333333;
-      height: 44px;
+      height: 32px;
       margin: 0;
       padding: 3px 0; }
     #conversejs .chat-head .avatar {
@@ -1159,7 +1158,7 @@
       #conversejs .chat-head #controlbox-tabs a.current:hover {
         box-shadow: none;
         border-bottom: 0;
-        height: 44px;
+        height: 32px;
         cursor: default;
         color: #D5D5D5; }
       #conversejs .chat-head #controlbox-tabs li {
@@ -1523,10 +1522,7 @@
 #conversejs .chatbox .dropdown span.icon-offline,
 #conversejs .chatbox .dropdown span.icon-dnd,
 #conversejs .chatbox .dropdown span.icon-away {
-  padding-top: 0.38rem; }
-
-#conversejs .chat-title {
-  padding: 0px 0px 0px 0px; }
+  padding-top: 0.3rem; }
 
 /*Style for the top right icons on the buddy list*/
 #conversejs #controlbox div.xmpp-status > SPAN {
@@ -1545,5 +1541,7 @@
 #conversejs .chat-title [class^="icon-"] {
   padding-right: 0.2rem; }
 
-#conversejs .chat-title, #conversejs dt.fancy-dropdown, #conversejs a.close-chatbox-button {
-  margin-top: 5px; }
+#conversejs span.header-contact-name {
+  position: fixed;
+  margin-top: 0.1rem;
+  margin-left: 0.3rem; }
