--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1419,6 +1419,9 @@
  * Copyright (c) 2012-2014, JC Brand <jc@opkode.com>
  * Licensed under the Mozilla Public License
  */
+#conversejs {
+  left: auto; }
+
 #conversejs #converse-roster dd a, .search-converse-contact dd a {
   /* ZCS - decline contact request icon */
   /* ZCS - accept contact request icon */ }
@@ -1545,3 +1548,5 @@
   position: fixed;
   margin-top: 0.1rem;
   margin-left: 0.3rem; }
+
+/*# sourceMappingURL=converse.css.map */
