Bug: 102151 - 'Click to hide these contacts' does not work
Changeset:
1.) group_header.html, pending_contacts.html, requesting_contacts.html - 
Removed title="{{desc_group_toggle}}" that displayed the tooltip on the buddy list header, pending contacts list header and requesting contacts list header.

2.) template.js -
Built compiled template file used by converse to render the UI based on the changed HTML files.

https://bugzilla.zimbra.com/show_bug.cgi?id=102151

Copied from Perforce
 Change: 560474

--- a/converse/converse.js-0.9.4/src/templates/group_header.html
+++ b/converse/converse.js-0.9.4/src/templates/group_header.html
@@ -1,1 +1,1 @@
-<span id="{{label_group}}" href="#" class="group-toggle" title="{{desc_group_toggle}}">{{label_group}}</span>
+<span id="{{label_group}}" href="#" class="group-toggle">{{label_group}}</span>
