--- a/converse/converse.js-0.9.4/src/templates/requesting_contact.html
+++ b/converse/converse.js-0.9.4/src/templates/requesting_contact.html
@@ -1,8 +1,7 @@
 {[ if (allow_chat_pending_contacts)  { ]}
 <a class="open-chat"href="#">
 {[ } ]}
-<span class="req-contact-name" title="Name: {{fullname}}
-JID: {{jid}}">{{fullname}}</span>
+<span class="req-contact-name" title="Name: {{fullname}}">{{fullname}}</span>
 {[ if (allow_chat_pending_contacts)  { ]}
 </a>
 {[ } ]}
