Integrate change 560574 from zimbra to JUDASPRIEST
-------------
Bug: 102661 - Script error: Cannot read property 'width' of null when opening invite
Add null check when determining width of appt.

https://bugzilla.zimbra.com/show_bug.cgi?id=102661

Copied from Perforce
 Change: 560576

--- a/converse/converse.js-0.9.4/src/templates/requesting_contact.html
+++ b/converse/converse.js-0.9.4/src/templates/requesting_contact.html
@@ -1,7 +1,8 @@
 {[ if (allow_chat_pending_contacts)  { ]}
 <a class="open-chat"href="#">
 {[ } ]}
-<span class="req-contact-name" title="Name: {{fullname}}">{{fullname}}</span>
+<span class="req-contact-name" title="Name: {{fullname}}
+JID: {{jid}}">{{fullname}}</span>
 {[ if (allow_chat_pending_contacts)  { ]}
 </a>
 {[ } ]}
