--- a/converse/converse.js-0.9.4/src/templates/chatbox.html
+++ b/converse/converse.js-0.9.4/src/templates/chatbox.html
@@ -1,18 +1,18 @@
 <div class="box-flyout" style="height: {{height}}px">
     <div class="dragresize dragresize-tm"></div>
     <div class="chat-head chat-head-chatbox">
+        <a class="close-chatbox-button icon-close"></a>
         <!--a class="toggle-chatbox-button icon-minus"></a-->
         <div class="chat-title">
 			<span class="icon-{{chat_status}}"></span>
             {[ if (url) { ]}
                 <a href="{{url}}" target="_blank" class="user">
             {[ } ]}
-                   <span class="header-contact-name"> {{ fullname }} </span>
+                    {{ fullname }}
             {[ if (url) { ]}
                 </a>
             {[ } ]}
-			<a class="close-chatbox-button icon-close"></a>
-		</div>
+        </div>
         <!-- p class="user-custom-message"><p/ -->
     </div>
     <div class="chat-body">
