Bug 102473 - 'X' is displayed over the email id and is not functional for chat window. The display name was moved into its own span. Some of the styles like width, text-overlap etc. also needed to be applied to it.
Merging

//depot/zimbra/JUDASPRIEST/ZimbraWebClient/converse/converse.js-0.9.4/...

to //depot/zimbra/main/ZimbraWebClient/converse/converse.js-0.9.4/...

https://bugzilla.zimbra.com/show_bug.cgi?id=102473

Copied from Perforce
 Change: 560760

--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -210,5 +210,8 @@
 #conversejs	span.header-contact-name {
 		position: fixed;
 		margin-top: 0.1rem;
-       margin-left: 0.3rem;
-}	
+        margin-left: 0.3rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: $chat-width - 55px;
+}
