--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Converse.js (Web-based XMPP instant messaging client)
  * http://conversejs.org
@@ -1544,4 +1545,7 @@
 #conversejs span.header-contact-name {
   position: fixed;
   margin-top: 0.1rem;
-  margin-left: 0.3rem; }
+  margin-left: 0.3rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 145px; }
