Bug 102560 - Safari : User name is not displayed for a chat window
Move the close div inside the chat title.


Merging

//depot/zimbra/JUDASPRIEST/ZimbraWebClient/converse/...

to //depot/zimbra/JUDASPRIEST/ZimbraWebClient/converse/...

https://bugzilla.zimbra.com/show_bug.cgi?id=102560

Copied from Perforce
 Change: 560764

--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -192,7 +192,8 @@
 #conversejs a.close-chatbox-button
  {
  font-size: 1.1rem;
- margin-top: 0.1rem;
+ margin-top: 0rem;
+ width:1.5rem;
  }
  
  #conversejs .chatbox .dropdown a {
