--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1531,7 +1531,8 @@
 
 #conversejs a.close-chatbox-button {
   font-size: 1.1rem;
-  margin-top: 0.1rem; }
+  margin-top: 0rem;
+  width: 1.5rem; }
 
 #conversejs .chatbox .dropdown a {
   margin-top: 0.1rem; }
