Bug 102753 - Firefox : Cross go below the chat window header.
Use absolute position for the close button.

https://bugzilla.zimbra.com/show_bug.cgi?id=102753

Copied from Perforce
 Change: 560792

--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -197,6 +197,8 @@
  font-size: 1.1rem;
  margin-top: 0rem;
  width:1.5rem;
+ position: absolute;
+ right: 0.4rem;
  }
  
  #conversejs .chatbox .dropdown a {
