--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1420,9 +1420,6 @@
  * Copyright (c) 2012-2014, JC Brand <jc@opkode.com>
  * Licensed under the Mozilla Public License
  */
-#conversejs {
-  left: auto; }
-
 #conversejs #converse-roster dd a, .search-converse-contact dd a {
   /* ZCS - decline contact request icon */
   /* ZCS - accept contact request icon */ }
@@ -1535,9 +1532,7 @@
 #conversejs a.close-chatbox-button {
   font-size: 1.1rem;
   margin-top: 0rem;
-  width: 1.5rem;
-  position: absolute;
-  right: 0.4rem; }
+  width: 1.5rem; }
 
 #conversejs .chatbox .dropdown a {
   margin-top: 0.1rem; }
