--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -5,6 +5,9 @@
  * Copyright (c) 2012-2014, JC Brand <jc@opkode.com>
  * Licensed under the Mozilla Public License
  */
+#conversejs {
+  left: auto;
+}
 
  #conversejs #converse-roster, .search-converse-contact {
      dd {
@@ -194,6 +197,8 @@
  font-size: 1.1rem;
  margin-top: 0rem;
  width:1.5rem;
+ position: absolute;
+ right: 0.4rem;
  }
  
  #conversejs .chatbox .dropdown a {
