Bug 102753 - Firefox : Cross go below the chat window header. Bug 102822 - On selecting near to cross will not close the window.
Remove the :active style from the close button.

https://bugzilla.zimbra.com/show_bug.cgi?id=102753

Copied from Perforce
 Change: 561203

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -681,8 +681,7 @@
     padding: 3px 3px 2px 3px;
     text-decoration: none; }
   #conversejs a.configure-chatroom-button:active,
-  #conversejs a.toggle-chatbox-button:active,
-  #conversejs a.close-chatbox-button:active {
+  #conversejs a.toggle-chatbox-button:active {
     position: relative;
     top: 1px; }
   #conversejs .chatroom-form-container {
