--- a/converse/converse.js-0.9.4/sass/_core.scss
+++ b/converse/converse.js-0.9.4/sass/_core.scss
@@ -750,8 +750,7 @@
   }
 
   a.configure-chatroom-button:active,
-  a.toggle-chatbox-button:active,
-  a.close-chatbox-button:active {
+  a.toggle-chatbox-button:active {
     position: relative;
     top: 1px;
   }
