Bug: 102982 - Multiple zimbraim service sent from converse at the time of re-connection.
Changeset:
1.) ZmChatApp.js - 
(a.) Adding css class conn-retry-disabled when reconnect function is invoked using 'retry' button and there on if someone clicks the retry button it will remain disabled till XHR fails, it will be enabled again.

2.) zm_core.scss - Added a class conn-retry-disabled.

3.) converse.css, converse.min.css - Pre-built files.

https://bugzilla.zimbra.com/show_bug.cgi?id=102982

Copied from Perforce
 Change: 562265

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*!
  * Converse.js (Web-based XMPP instant messaging client)
  * http://conversejs.org
@@ -1481,6 +1480,9 @@
   top: 20px; }
 #conversejs #login-dialog .connectionSpinnerPanel A.conn-retry {
   text-decoration: underline; }
+#conversejs #login-dialog .connectionSpinnerPanel A.conn-retry-disabled {
+  color: #808080;
+  cursor: default; }
 
 #conversejs #controlbox-tabs LI A.current {
   line-height: 25px; }
