--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -111,6 +111,11 @@
       A.conn-retry {
         text-decoration: underline;
       }
+
+      A.conn-retry-disabled {
+        color: #808080;
+        cursor: default;
+      }
     }
   }
 
