Make vertical spacing consistent in chat window
Copied from Perforce
 Change: 563695

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1556,3 +1556,18 @@
   overflow: hidden;
   text-overflow: ellipsis;
   width: 145px; }
+
+#conversejs #converse-roster, #conversejs .search-converse-contact {
+  margin-top: 0.25rem; }
+
+#conversejs .controlbox-pane {
+  padding-top: 0px; }
+
+#conversejs .chat-content {
+  padding-top: .5rem; }
+
+#conversejs .chat-event, #conversejs .chat-date, #conversejs .chat-info {
+  padding-top: 0.15rem; }
+
+#conversejs .chat-message {
+  padding-top: 0.15rem; }
