Vertically center align content in minimized Buddy List header
Copied from Perforce
 Change: 563856

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1571,3 +1571,7 @@
 
 #conversejs .chat-message {
   padding-top: 0.15rem; }
+
+/*Adjust top padding so that content is vertically center aligned in minimized Buddy List header */
+#conversejs .toggle-controlbox {
+  padding-top: .7rem; }
