Bug 103681 - Fix style for Date header in Chat Window
https://bugzilla.zimbra.com/show_bug.cgi?id=103681

Copied from Perforce
 Change: 564588

--- a/converse/converse.js-0.9.4/sass/zm_core.scss
+++ b/converse/converse.js-0.9.4/sass/zm_core.scss
@@ -239,7 +239,7 @@
     padding-top: .5rem;
 }
 
-#conversejs .chat-event, #conversejs .chat-date, #conversejs .chat-info {
+#conversejs .chat-event, #conversejs .chat-info {
 	padding-top: $vertical-spacing-chat-window;
 }
 
@@ -266,4 +266,13 @@
 #conversejs .xmpp-status-menu li a span.icon-offline{
   position: relative;
   top: 0.14rem;
+}
+
+/*Style for Date header in Chat Window*/
+#conversejs .chat-date{
+	text-align: center;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: $vertical-spacing-chat-window*2;
 }
